# marketplace-builder-core

./: .clippy.toml  .gitignore  Cargo.toml  crates.js  flake.nix  help.html  search-index.js  settings.html  src-files.js
.cargo/: audit.toml
.github/workflows/: audit.yml  build.yml  build_nix.yml  build_windows.yml  combine-prs.yml  coverage.yml  lint.yml  test.yml  update_nix.yml
crates/legacy/: Cargo.toml
crates/legacy/src/: block_size_limits.rs  block_store.rs  builder_state.rs  lib.rs  service.rs  testing.rs
crates/legacy/src/old/: service.rs  (+1 more)
crates/legacy_refactored/: Cargo.toml
crates/marketplace/: Cargo.toml
crates/marketplace/src/: builder_state.rs  hooks.rs  lib.rs  service.rs
crates/marketplace/src/testing/: basic_test.rs  integration.rs  mod.rs  order_test.rs
crates/persistence/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: block.rs  error.rs  lib.rs  state.rs  testing.rs  utils.rs
crates/shared/src/coordinator/: builder_state_map.rs  mod.rs  tiered_view_map.rs
crates/shared/src/persistence/: mod.rs  sqlite.rs
crates/shared/src/testing/: consensus.rs  constants.rs  generation.rs  mock.rs  mod.rs  validation.rs
crates/shared/src/utils/: event_serivce_wrapper.rs  mod.rs  rotating_set.rs
hotshot_builder_core/: all.html  enum.WaitAndKeep.html  index.html  sidebar-items.js  struct.BlockId.html  struct.BuilderStateId.html  struct.ParentBlockReferences.html
hotshot_builder_core/builder_state/: enum.MessageType.html  enum.Status.html  enum.TransactionSource.html  enum.TriggerStatus.html  index.html  sidebar-items.js  struct.BuildBlockInfo.html  struct.BuilderState.html  struct.BuiltFromProposedBlock.html  struct.DAProposalInfo.html  struct.DaProposalMessage.html  struct.DecideMessage.html  struct.ParentBlockReferences.html  struct.QCMessage.html  struct.QuorumProposalMessage.html  struct.RequestMessage.html  struct.ResponseMessage.html  type.TxTimeStamp.html
hotshot_builder_core/service/: enum.RecvError.html  enum.TryRecvError.html  fn.broadcast.html  fn.run_non_permissioned_standalone_builder_service.html  fn.run_permissioned_standalone_builder_service.html  index.html  sidebar-items.js  struct.BlockInfo.html  struct.BuilderStatesInfo.html  struct.GlobalState.html  struct.ProposedBlockId.html  struct.ProxyGlobalState.html  struct.ReceivedTransaction.html
hotshot_builder_core/testing/: index.html
hotshot_builder_core/testing/basic_test/: enum.RecvError.html  enum.TryRecvError.html  fn.broadcast.html  index.html  struct.BroadcastReceiver.html  struct.BroadcastSender.html  struct.DaProposal.html  struct.GeneralStaticCommittee.html  struct.Leaf.html  struct.Proposal.html  struct.QuorumProposal.html  struct.SimpleCertificate.html  struct.SuccessThreshold.html  struct.ViewNumber.html  trait.BlockPayload.html  trait.ConsensusTime.html  trait.NodeType.html  type.BLSPrivKey.html  type.BLSPubKey.html  type.QuorumCertificate.html
marketplace_builder_core/: all.html  enum.WaitAndKeep.html  index.html  sidebar-items.js  struct.BlockId.html  struct.BuilderStateId.html
marketplace_builder_core/bid/: fn.from_bid_config.html  fn.read_bid_config_file.html  index.html  sidebar-items.js  struct.BidConfig.html
marketplace_builder_core/builder_state/: enum.MessageType.html  enum.Status.html  enum.TransactionSource.html  enum.TriggerStatus.html  index.html  sidebar-items.js  struct.BuildBlockInfo.html  struct.BuilderState.html  struct.BuiltFromProposedBlock.html  struct.DaProposalMessage.html  struct.DecideMessage.html  struct.QCMessage.html  struct.QuorumProposalMessage.html  struct.RequestMessage.html  struct.ResponseMessage.html  trait.BuilderProgress.html  type.TxTimeStamp.html
marketplace_builder_core/service/: enum.RecvError.html  enum.TryRecvError.html  fn.broadcast.html  fn.broadcast_channels.html  fn.run_builder_service.html  fn.run_non_permissioned_standalone_builder_service.html  fn.run_permissioned_standalone_builder_service.html  index.html  sidebar-items.js  struct.BlockInfo.html  struct.BroadcastReceivers.html  struct.BroadcastSenders.html  struct.BuilderStatesInfo.html  struct.GlobalState.html  struct.NoHooks.html  struct.ProposedBlockId.html  struct.ProxyGlobalState.html  struct.ReceivedTransaction.html  trait.BuilderHooks.html  trait.BuilderTransaction.html
marketplace_builder_core/testing/: index.html
marketplace_builder_core/testing/basic_test/: enum.RecvError.html  enum.TryRecvError.html  fn.broadcast.html  index.html  struct.BroadcastReceiver.html  struct.BroadcastSender.html  struct.DaProposal.html  struct.GeneralStaticCommittee.html  struct.Leaf.html  struct.Proposal.html  struct.QuorumProposal.html  struct.SimpleCertificate.html  struct.SuccessThreshold.html  struct.ViewNumber.html  trait.BlockPayload.html  trait.ConsensusTime.html  trait.NodeType.html  type.BLSPrivKey.html  type.BLSPubKey.html  type.QuorumCertificate.html
marketplace_builder_core/utils/: index.html  sidebar-items.js  struct.BlockId.html  struct.BuilderStateId.html  struct.BuiltFromProposedBlock.html  struct.EventServiceStream.html  struct.ParentBlockReferences.html  struct.RotatingSet.html  trait.LegacyCommit.html
search.desc/hotshot_builder_core/: hotshot_builder_core-desc-0-.js
search.desc/marketplace_builder_core/: marketplace_builder_core-desc-0-.js
src/: api.rs  bid-config.tmol  bid-config.toml  bid.rs  builder.toml  builder_state.rs  lib.rs  service.rs  testing.rs  utils.rs
src/hotshot_builder_core/: builder_state.rs.html  lib.rs.html  service.rs.html  testing.rs.html
src/hotshot_builder_core/testing/: basic_test.rs.html
src/marketplace_builder_core/: bid.rs.html  builder_state.rs.html  lib.rs.html  service.rs.html  testing.rs.html  utils.rs.html
src/marketplace_builder_core/testing/: basic_test.rs.html
src/testing/: basic_test.rs  mod.rs  order_test.rs  ordering.rs
testing/: basic_test.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
type.impl/std/: primitive.u128.js
(+34 files in other folders)
