[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "sishan/trait_builder_transaction" }
hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "sishan/trait_builder_transaction" }
hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "sishan/trait_builder_transaction" }
hotshot-macros = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "sishan/trait_builder_transaction" }
hotshot-task-impls = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "sishan/trait_builder_transaction" }
hotshot-testing = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "sishan/trait_builder_transaction" }
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "sishan/trait_builder_transaction" }
hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "sishan/trait_builder_transaction" }

anyhow = "1"
async-broadcast = "0.7"
async-compatibility-layer = { version = "1.2.1", default-features = false }
async-lock = "2.2"
async-std = "1.9.0"
async-trait = "0.1"
bincode = "1.3"
clap = "4.5"
chrono = { version = "0.4", features = ["serde"] }
committable = "0.2"
derivative = "2.2"
either = "1.13"
futures = "0.3"
hex = "0.4.3"
lru = "0.12.5"
multimap = "0.10.0"
num_cpus = "1.16"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
snafu = "0.8"
surf-disco = "0.9"
tagged-base64 = "0.4"
tide-disco = "0.9"
tokio = "1"
toml = "0.8"
tracing = "0.1"
url = "2.3"
vbs = "0.1"
vec1 = "1.12"

[workspace.package]
version = "0.1.51"
edition = "2021"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(async_executor_impl, values("async-std", "tokio"))',
    'cfg(async_channel_impl, values("async-std", "tokio"))',
] }

[workspace.lints.clippy]
disallowed-names = "deny"
doc_markdown = "deny"
doc_link_with_quotes = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_html_tags = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
