[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "f62b557" }
hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "f62b557" }
hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "sishan/tx_status_api" }
hotshot-macros = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "f62b557" }
hotshot-task-impls = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "f62b557" }
hotshot-testing = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "f62b557" }
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "f62b557" }
hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", rev = "f62b557" }

anyhow = "1"
async-broadcast = "0.7"
async-lock = "3"
async-trait = "0.1"
bincode = "1.3"
clap = "4.5"
chrono = { version = "0.4", features = ["serde"] }
committable = "0.2"
derivative = "2.2"
derive_more = "1.0"
either = "1.13"
futures = "0.3"
jf-vid = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
hex = "0.4.3"
lru = "0.12"
multimap = "0.10.0"
nonempty-collections = "0.2"
once_cell = "1.20"
num_cpus = "1.16"
portpicker = "0.1.1"
quick_cache = "0.6"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
snafu = "0.8"
surf-disco = "0.9"
tagged-base64 = "0.4"
tide-disco = "0.9"
thiserror = "2.0"
tokio = "1"
toml = "0.8"
tracing = "0.1"
tracing-test = "0.1"
typenum = "1.17"
url = "2.5"
vbs = "0.1"
vec1 = "1.12"
tracing-subscriber = "0.3"

[workspace.package]
version = "0.1.56"
edition = "2021"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(legacy_builder_refactored, values(none()))',
    'cfg(coverage_nightly)',
] }

[workspace.lints.clippy]
disallowed-names = "deny"
doc_markdown = "deny"
doc_link_with_quotes = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
invalid_html_tags = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
