[package]
name = "marketplace-builder-shared"
version = { workspace = true }
edition = { workspace = true }

[features]
testing = []

[dependencies]
anyhow = { workspace = true }
hotshot = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-types = { workspace = true }

committable = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
surf-disco = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }

[lints]
workspace = true
